| Bug #27320 | ndb handler does not reset extra flags on reset() | ||
|---|---|---|---|
| Submitted: | 21 Mar 2007 9:45 | Modified: | 2 Apr 2007 13:15 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 4.1 5.0 5.1 | OS: | |
| Assigned to: | Tomas Ulin | Target Version: | |
[21 Mar 2007 9:45]
Tomas Ulin
[22 Mar 2007 12:29]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/22600 ChangeSet@1.2400, 2007-03-22 12:42:13+01:00, tomas@whalegate.ndb.mysql.com +2 -0 Bug #27320 ndb handler does not reset extra flags on reset() - make sure all extra flags are reset
[30 Mar 2007 10:53]
Bugs System
Pushed into 5.0.40
[2 Apr 2007 13:15]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Does not appear to be visible change to end users. Closed without further action.
[1 Jun 2007 21:22]
Bugs System
Pushed into 5.1.20-beta
