Bug #27320 ndb handler does not reset extra flags on reset() - make sure all extra flags are reset